sprint1&2 review and bugfix
